4B/cs444/tests/pass/pass_protectedconstructors.joos
/* pass: protected constructors */
public class A {
  protected A() {}
}

