4B/cs444/tests/fail/fail_array_suffix.joos
/* fail: array declaration after variable name */
public class A {
  public A() {}
  protected int x[];
}

